# neural

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake
include/: CostCalculator.hpp  LossFunction.hpp  Matrix.hpp  NeuralNetwork.hpp  OutputWindow.hpp  hackttf.h
src/: CostCalculator.cpp  LossFunction.cpp  NeuralNetwork.cpp  OutputWindow.cpp  main.cpp
